backport to mc 1.20.1 (no config screen)